--- a/src/components/breakingNews/breakingNews.scss
+++ b/src/components/breakingNews/breakingNews.scss
@@ -2,7 +2,7 @@
   background-color: #333;
   color: #fff;
   padding: 8px;
-  position: fixed;
+  position: relative;
 
   width: 100%;
   overflow: hidden;
