--- a/src/components/mainBody/mainBody.scss
+++ b/src/components/mainBody/mainBody.scss
@@ -8,4 +8,84 @@
       width: 100%;
     }
   }
+  .advertMiddleWrapper {
+    display: flex;
+    gap: 25px;
+    .advert {
+      flex: 8;
+      margin-top: 100px;
+    }
+    .newsLetter {
+      flex: 4;
+      margin-top: 60px;
+      .top {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px 0px;
+        border-top: 2px solid red;
+        z-index: 1;
+
+        h2 {
+          position: relative;
+          margin: 0;
+          color: red;
+          font-size: 16px;
+          font-weight: 700;
+          line-height: 26px;
+          text-transform: uppercase;
+          z-index: 1;
+        }
+        .icon {
+          color: gray;
+          font-size: 18px;
+          line-height: 26px;
+          cursor: pointer;
+        }
+      }
+
+      .bottom {
+        background-color: white;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+
+        .bottomWrapper {
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+          margin: 10px;
+
+          form {
+            .formInput {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              input {
+                width: 90%;
+                height: 40px;
+                border: none;
+                outline: none;
+                padding: 10px;
+                background-color: rgb(215, 194, 194);
+              }
+              .button {
+                height: 40px;
+                width: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: red;
+                color: white;
+                border: none;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
